# Android-Native-Mod

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Engine/: Includes.hpp
app/src/main/cpp/Engine/API/: API.cpp  API.h  Matrix4x4.hpp  Rect.hpp  Unity.h  Vector2.hpp  Vector3.hpp
app/src/main/cpp/Engine/Structure/: CBaseEntry.cpp  CBaseEntry.hpp  CheatDetector.cpp  CheatDetector.hpp  ExampleEntry.cpp  ExampleEntry.hpp
app/src/main/cpp/Utils/: Logger.h
gradle/wrapper/: gradle-wrapper.properties
